--- a/MemoireMIAGEM2/Concept.tex
+++ b/MemoireMIAGEM2/Concept.tex
@@ -5,8 +5,6 @@
 
 Un web Service Composite est  le résultat des différentes combinaisons de plusieurs web Services qui vise à répondre aux requêtes complexes des utilisateurs.
 Pendant l'exécution des Web services composites (CWS), un Web service composant (WS) peut échouer ou tomber en panne, et pour cela il existe des stratégies qui permettent la réparation du problème telles que  la réexécution du WS,la réplication,Récupération arrière ou point de contrôle.
-La question qui se pose, quelle est la meilleure stratégie de récupération ? 
-( a revoir ) 
 
 \section{Service Web Composite}
 
@@ -23,7 +21,7 @@ L'architecture orientée services a pour objectif la décomposition d'une foncti
 \label{fig:1}
 \end{figure}
 
-La figure 1 illustre l'architecture orientée services, la contribution de ce mémoire se positionne dans la couche Composition et exécution de services.
+La figure ci-dessus illustre l'architecture orientée services, la contribution de ce mémoire se positionne dans la couche Composition et exécution de services.
 Cette couche fournit une composition des services et se charge du suivi de l’exécution de ces services composites. Un aspect important de cette couche est la résilience aux
 pannes et l’adaptation en fonction des changements dans le système \cite{1}.
 
