--- a/MemoireMIAGEM2/Etat_de_l'art.tex
+++ b/MemoireMIAGEM2/Etat_de_l'art.tex
@@ -39,7 +39,7 @@ Les chercheurs ont proposé un Framework dont l'exécution du service composite 
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\linewidth]{images/architecture Frmwork.jpg}
+\includegraphics[width=1\linewidth]{images/architectureFrmwork.jpg}
 \end{center}
 \caption{Architecture d'exécution \cite{1}}
 \label{fig:4}
@@ -79,7 +79,7 @@ Sur cette base, la conception sera sous forme d'une boucle d'auto-guérison/auto
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\linewidth]{images/Boucle auto-corrective des Agents de Service.jpg}
+\includegraphics[width=1\linewidth]{images/Boucleauto-correctivedesAgentsdeService.jpg}
 \end{center}
 \caption{Architecture d'exécution \cite{1}}
 \label{fig:5}
