--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -35,10 +35,6 @@
   title = { Validation croisée }
 }
 
-https://medium.com/@bobkrc/machine-learning-apprentissage-supervisé-ou-non-supervisé-bced5be4fd7f
-
-https://openclassrooms.com/courses/initiez-vous-au-machine-learning/identifiez-les-differents-types-de-problemes-de-machine-learning
-
 
 @MISC{RF,
   author = {Shotton, J., Sharp, T., Kipman, A., Fitzgibbon, A., Finocchio, M., Blake},
@@ -46,12 +42,14 @@ https://openclassrooms.com/courses/initiez-vous-au-machine-learning/identifiez-l
   url = {https://dataanalyticspost.com/Lexique/random-forest/}
 }
 
-
 @MISC{NB,
   author = { Younes Benzaki},
   title = {Naive Bayes Classifier pour Machine Learning}, 
   url = {https://mrmint.fr/naive-bayes-classifier}
 }
 
-https://www.analyticsvidhya.com
-
+@MISC{ML,
+  author = {RK Bob},
+  title = {apprentissage supervisé ou non supervisé}, 
+  url = {https://medium.com/@bobkrc/machine-learning-apprentissage-supervisé-ou-non-supervisé-bced5be4fd7f}
+}
