--- a/MemoireMIAGEM2/memoire.tex
+++ b/MemoireMIAGEM2/memoire.tex
@@ -173,13 +173,13 @@ urlcolor=black}
 
 \begin{titlepage}
 \begin{center}
-\includegraphics[width=0.25\textwidth]{images/universite}
+\includegraphics[width=0.6\textwidth]{images/univ.png}
 
 \vfill
 
-{\large Université de Paris Ouest Nanterre La Défense}\\[0.5cm]
+{\large Université de Paris Ouest Nanterre La Défense}\\[0.7cm]
 
-{\large Mémoire Master 2 MIAGE}\\[0.5cm]
+{\large Mémoire Master 2 MIAGE}\\[0.7cm]
 
 
 
@@ -192,6 +192,9 @@ urlcolor=black}
 \vfill
 \vfill
 
+\includegraphics[width=0.6\textwidth]{images/ML.jpg}
+
+
 % Author and supervisor
 \noindent
 \begin{minipage}{0.7\textwidth}
@@ -201,7 +204,7 @@ urlcolor=black}
 \end{minipage}%
 \begin{minipage}{0.7\textwidth}
    \large
-    \emph{Encadrants :} \\
+    \emph{Encadré par :} \\
 - Mme.~Castillo Marta \textsc{RUKOZ}
 \end{minipage}
 
@@ -232,7 +235,18 @@ Enfin, je tiens à remercier toutes les personnes qui m’ont aidée lors de la 
 
 \chapter*{Résumé}
 
-\textbf{Mots clés : Service Web Composite, Tolérance aux pannes, stratégie de récupération, Machine Learning }
+Dans ce mémoire, nous présentons une approche de prédiction pour les services Web composites,
+qui permet de prédire le mécanisme de récupération en cas de défaillance d'un service Web composant.
+Notre étude se base sur une approche d'exécution auto-corrective (self-healing) de services Web composites, qui se base sur des agents qui sont capables de prendre, d'une manière automatique, des décisions pendant l'exécution des services, à partir de leurs connaissances et la base d'informations qu'ils ont.
+les agents font des déductions, en fonction des informations qu'ils ont sur le service, sur eux-même, en prenant en compte ce qui est attendu et ce qui se passe réellement lors de l'exécution.
+
+Notre contribution dans ce mémoire consiste la restitution de toute cette base d'informations, ainsi que les stratégies de récupérations sélectionnées après la fin d'exécution, pour les exploiter comme des données  d'apprentissage automatique. 
+
+Les algorithmes de classification de Machine Learning nous ont permet de construire des modèles qui permettent de prédire le mécanisme de récupération en cas de panne sur les services composites.
+
+La collecte et le traitement des données sont faits a travers l'outil Pentaho Data Integration, qui offre une extension de Machine Learning a travers WEKA, dans laquelle on a exécuté tous les algorithmes de classification en mesurant leurs performances de précision.
+
+\textbf{Mots clés : Service Web Composite, Tolérance aux pannes, stratégie de récupération, Machine Learning, Classification }
 
 
 \tableofcontents
