--- a/MemoireMIAGEM2/Conclusion.tex
+++ b/MemoireMIAGEM2/Conclusion.tex
@@ -16,7 +16,7 @@ La limite la plus importante de ce mémoire se situe au niveau de la phase de tr
 L'équipe des chercheurs responsables du projet de l'exécuteur auto-corrective, avec lesquels on travaille, et sur leurs données générées qu'on se base pour l'auto apprentissage, ont eu des problèmes au niveau de stockage du coups ils ont perdu l'ensemble des données concernées.
 
 Donc la réalisation a été basée sur des données qui sont générées d'une manières aléatoire, pour bien décrire le processus suivis de la mis en oeuvre de l'apprentissage automatique a travers les outils déployés (Pentaho/WEKA).
-Mais le résultat final de l'analyse qui consiste le choix de l'algorithme le plus précis pour prédire la stratégie de récupération reste une hypothèse ouverte puisque nos données sont aléatoire.
+Mais le résultat final de l'analyse qui consiste le choix de l'algorithme le plus précis pour prédire la stratégie de récupération reste une hypothèse ouverte puisque nos données sont aléatoires.
  
 Nos perspectives sont sur le même niveau que nos limites, on envisage obtenir des données qui sont réelles générées par l'exécuteur d'auto-corrective pour pouvoir sélectionnée un modèle de prédiction définitif, sur lequel on peux se baser pour prendre les décisions de choix du mécanisme de récupération en cas de panne des services Web composites.
 
