--- a/MemoireMIAGEM2/introduction.tex
+++ b/MemoireMIAGEM2/introduction.tex
@@ -1,15 +1,13 @@
-\vspace{1cm}
-
-
-\chapter{introduction}
+\chapter*{Introduction}
+\addcontentsline{toc}{chapter}{Introduction}
+\markboth{Introduction}{Introduction}
+\label{chap:introduction}
 
 Dans les années 2000, les chercheurs et les ingénieurs informatiques ont commencé à réfléchir au remplacement des interactions manuelles humaines par des processus automatisés, ce qui a poussé IBM à introduire le concept de l'informatique autonome. ils ont présenté l'approche de l'auto gestion qui présente le pilier principale de l'informatique autonome, qui se compose à son tour par quatre aspects: auto-configuration, auto-optimisation, auto-guérison, et auto-protection.
 
 Dans ce mémoire, on va se concentré sur la propriété d'auto-guérison, qui représente la capacité du système à détecter, analyser et réparer les pannes d'une manière automatique.
 
-Récemment les chercheurs ont montré qu'un comportement autonome d'un système est l'une des plus importantes tendances qui formeront l'avenir de l'Internet des Objet dans les prochaines années.
-
-Cela montre que l'approche de l'auto-guérison à une grande importance sur la performance et la réduction de la complexité d'un logiciel.
+Récemment les chercheurs ont montré qu'un comportement autonome d'un système est l'une des plus importantes tendances qui formeront l'avenir de l'Internet des Objet dans les prochaines années. Cela montre que l'approche de l'auto-guérison à une grande importance sur la performance et la réduction de la complexité d'un logiciel.
 
 R.Angarita, M.Rukoz et Y.Cardinale sont des chercheurs dans le domaine de l'auto-guérison des systèmes, plus précisément l'auto-guérison des services Web composites. ils ont proposé récemment une approche d'exécution auto-corrective qui se base sur des agents qui prennent en charge l'exécution des services composites, en se basant sur une base de connaissance contenant un ensemble d'informations sur les services et leurs contextes d'exécution, pour prendre la décision sur le choix de la stratégie de récupération en cas de panne.
 
