--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -35,6 +35,26 @@
   title = { Validation croisée }
 }
 
+@book{8,
+  author = {Nadia Nouali-Taboudjemat, Zohra Mahfoud },
+  title = {Support des propriétés transactionnelles dans les services web}
+}
+@book{9,
+  author = {Florian Boudin},
+  title = {Machine Learning avec Weka}
+}
+
+@book{10,
+  author = {Fannia Pacheco},
+  title = {Business Intelligence and Business
+Analytics for Autonomic Systems}
+}
+
+@book{11,
+  author = {Christine Decaestecke},
+  title = {Les arbres de décision
+(decision trees)}
+}
 
 @MISC{RF,
   author = {Shotton, J., Sharp, T., Kipman, A., Fitzgibbon, A., Finocchio, M., Blake},
